add notes view